--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
                     <h5>Tomorrow’s Brands, Today™</h5>
                     <h5>Paris / San Diego</h5>
                 </div>
-                <hr>
+                <div class="line"></div>
                 <div class="page2ii">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We are a venture firm and digital agency. Our mission is to transform founders' visions into remarkable brands. 
-                        Choose traditional compensation or an equity offset through our Venture Model — your vision, 
-                        your decision.<br><br></p>
+                    <p class="up"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We are a venture firm and digital agency. Our</span>
+                        <span class="up">mission is to transform founders' visions into</span>
+                        <span class="up">remarkable brands. Choose traditional</span> 
+                        <span class="up">compensation or an equity offset through our</span> 
+                        <span class="up">Venture Model — your vision, your decision.<br><br></span>
                 </div>
             </div>
         </div>
@@ -44,8 +46,10 @@
                 <h4>Agency & Venture  <span style="background-color: black;color: white;">Models</span>
                     <span class="iblock" style="display: inline-block; transform: rotate(-90deg); font-size: 1.7vw;">↵</span>
                 </h4>
-                <h2>Explore your services</h2>
-                <h2>& engagement models</h2>
+                <!-- <div class="line"></div> -->
+                <h2>Explore our services</h2>
+                <h2>and engagement models</h2>
+                <!-- <div class="line"></div> -->
             </div>
             <div class="page3i">
                 <h4>Transforming visions into brands.</h4>
